# kirine-client

./: .gitattributes  .gitignore  LICENSE  README.md  config.toml  package-lock.json  package.json  supported_models.json  tailwind.config.cjs  vite.config.ts
src-model/: .gitignore  (+3 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  test_support.rs
src-tauri/src/client/: entity.rs
src-tauri/src/common/: local_paths.rs  mod.rs  task_paths.rs
src-tauri/src/config/: env_config.rs  log.rs  mod.rs  ui_config.rs
src-tauri/src/hooks/: mod.rs  model_info.rs  settings.rs  speaker_info.rs  task_history.rs
src-tauri/src/migration/: add_model_info_downloaded_flag.rs  add_model_training_description.rs  add_vox_cpm2_lora_feature_flag.rs  create_local_schema.rs  m20260415_000001_drop_task_hardware_type.rs  m20260416_000001_add_model_training_runtime_fields.rs  m20260416_000002_refactor_model_metadata.rs  m20260417_000001_seed_vox_cpm2_model_info.rs  m20260508_000002_make_tts_speaker_nullable.rs  m20260508_000003_add_model_download_type.rs  m20260511_000004_remove_task_history_error_message.rs  m20260512_000005_rename_model_scale_to_model_version.rs  mod.rs  seed_moss_tts_local_model_info.rs  seed_qwen3_tts_preset_speakers.rs  seed_vox_cpm2_model_info.rs
src-tauri/src/service/: mod.rs  models.rs
src-tauri/src/service/local/: db.rs  history.rs  mod.rs  model_info.rs  speaker.rs  supported_models.rs  training.rs  tts.rs  voice_clone.rs
src-tauri/src/service/pipeline/: llm_models.rs  mod.rs  model_artifacts.rs  model_paths.rs  pipeline.rs  script_paths.rs  training.rs  tts.rs  voice_clone.rs
src-tauri/src/utils/: audio.rs  file_ops.rs  mod.rs  process.rs  time.rs
src-tauri/tests/: config_loading.rs  local_service.rs  ui_config_loading.rs  vox_cpm2_training.rs  vox_cpm2_tts.rs
src-tauri/windows/: prepare-dependencies.nsh
src-tauri/windows/prepare-dependencies/: common.nsh  ffmpeg.nsh  sox.nsh  src-model.nsh
(+170 files in other folders)
