[package]
name = "kirine-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kirine_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
sea-orm = { version = "1.1.20", default-features = false, features = [
    "macros",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
log = "0.4"
time = { version = "0.3.47", features = [
    "formatting",
    "local-offset",
    "macros",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
async-trait = "0.1.89"
config = { version = "0.15.19", features = ["toml"] }
tracing-appender = "0.2.4"
toml = "0.8"
anyhow = "1.0"
rand = "0.8"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
calamine = "0.26"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
] }
